Changing the menu to drawer navigator Some other refactorings

--- a/z/hosting/public/index_es.html
+++ b/z/hosting/public/index_es.html
@@ -33,7 +33,7 @@
   <body>
 	  <div id="message">
 
-<h1>CESoft: Política de privacidad</h1>
+<h1>Encuentrame! - Política de privacidad</h1>
 
 <p>CESoft ha desarrollado Encuéntrame! como una app de código abierto. Este SERVICIO lo proporciona CESoft sin ningún coste y para su uso tal cual es.</p>
 <p>Este documento informa a los usuarios respecto de las políticas de recogida, uso y
