--- a/z/hosting/public/index.html
+++ b/z/hosting/public/index.html
@@ -33,18 +33,16 @@
   <body>
 	  <div id="message">
 		  
-		 
-		  
-<h1>CESoft Privacy Policy</h1>
+<h1>Find me! - Privacy Policy</h1>
 
-<p>CESoft built the Encuentrame! app as an open source app. This SERVICE is provided by CESoft at no cost and is intended for use as is.</p>
+<p>CESoft built the Find me! app as an open source app. This SERVICE is provided by CESoft at no cost and is intended for use as is.</p>
 <p>This page is used to inform visitors regarding our policies with the collection, use, and
     disclosure of Personal Information if anyone decided to use our Service.</p>
 <p>If you choose to use our Service, then you agree to the collection and use of information in
     relation with this policy. The Personal Information that we collect are used for providing and
     improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.</p>
 <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions,
-    which is accessible at Encuentrame!, unless otherwise defined in this Privacy Policy.</p>
+    which is accessible at Find me!, unless otherwise defined in this Privacy Policy.</p>
 
 <p><strong>Information Collection and Use</strong></p>
 <p>For a better experience while using our Service, we may require you to provide us with certain
@@ -98,7 +96,6 @@
 
 <p><strong>Contact Us</strong></p>
 <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at <strong>op2501@gmail.com</strong>.</p>
-
 
     </div>
     <!-- div id="message">
